2006-09-21  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>

	* vm-sound-ALSA/sqUnixSoundALSA.c (sound_Start): EPIPE is not a
	fatal error suring sound startup.

2006-09-19  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>

	* plugins/SecurityPlugin/sqUnixSecurity.c (ioInitSecurity): Set
	secure directory from SQUEAK_SECUREDIR if set, otherwise
	implicitly from image path.

2006-09-18  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>

	* npsqueak/Makefile (npsqueak.so): Delete target before making
	hard link to libtool output file.

	* config/Makefile.install (install-doc): Ignore errors when
	compressing documentation.

2006-09-17  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>

	* vm-sound-ALSA: Add support for ALSA sound output.

	* vm-display-X11/sqUnixX11.c: Only refer to completions and
	useXshm when USE_XSHM defined.

2006-09-15  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>

	* vm-display-X11/sqUnixX11.c (handleEvent): Redraw display when
	visibility changes to a less obscured state.  (Disabled by
	default.)

	* vm/sqGnu.h: Don't assign %ebx to CB_REG on Darwin-i386.

	* npsqueak/Makefile: Use libtool to build browser plugin.

2006-06-05  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>

	* plugins/FilePlugin/sqUnixFile.c (dir_Delete): Invalidate cached
	info when deleting lastPath.

2006-04-24  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>

	* vm/acinclude.m4: Add CoreServices framework to link libs on
	Darwin.

	* vm/sqUnixMain.c (sqGetFilenameFromString): Resolve links and
	aliases if resolveAliases is nonzero.

	* vm/mac-alias.c: Added.

	* plugins/AioPlugin/Makefile.inc (XCPPFLAGS): XCPPFLAGS defines
	SQAIO_H="sqaio.h".

	* vm/sqUnixMain.c (ioRelinquishProcessorForMicroseconds): Reset
	interruptCheckCounter iff > 1/25 sec has elapsed.

----------------------------------------------------------------
	
2006-04-23  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>
